--- a/_config.yml
+++ b/_config.yml
@@ -21,18 +21,18 @@ title_separator          : "-"
 subtitle                 : "iOS Dev"# site tagline that appears below site title in masthead
 name                     : "Kim Seung Jin"
 description              : "description."
-url                      : #"https://swift-man.github.io/"# the base hostname & protocol for your site e.g.
+url                      : "https://swift-man.github.io/"# the base hostname & protocol for your site e.g.
 baseurl                  : #"/blog"# the subpath of your site, e.g. "/blog"
-repository               : #"swift-man/swift-man.github.io"# GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "swift-man/swift-man.github.io"# GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/swift-man.jpg"# path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/cloud.png"# path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : "홈페이지 최상단 타이틀"# overrides the website title displayed in the masthead, use " " for no title
+masthead_title           : "Swift-Man Blog"# overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs            : false # true, false (default) // _data/ui-text.yml에 다국어 지원 가능합니다.
 words_per_minute         : 200 #해당 포스트 읽는데 걸리는 시간을 계산하기 위해 대락 분당 읽는 수가 몇글자가 될지 적는 공간.
 comments:
   provider               : true, "disqus", #"discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
   disqus:
-    shortname            :swift-man # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    shortname            :"https-swift-man-github-io" # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
@@ -281,7 +281,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: single
+      layout: default
       author_profile: true
       read_time: true
       comments: true
