[Feat] 구글 검색 등록

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,14 +20,6 @@ main:
     url: /tdd/
   - title: "ETC"
     url: /year-archive/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
 ##############
 sidebar-swift:
   - title: "Swift 5.5"
@@ -193,6 +185,11 @@ sidebar-git:
     url: /blog/
   - title: "Reset"
     url: /git/
+  - title: "Commit Message"
+    url: /git/commit-message/
+    children:
+      - title: "Operators"
+        url: /operators/
 ##############
 sidebar-swift-ui:
   - title: "Swift-UI"
