--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "SwiftMan Blog"
 title_separator          : "-"
 subtitle                 : "iOS Dev"# site tagline that appears below site title in masthead
 name                     : "Kim Seung Jin"
-description              : "description."
+description              : "슬금슬금 공부하기."
 url                      : #"https://swift-man.github.io/"# the base hostname & protocol for your site e.g.
 baseurl                  : #"/blog"# the subpath of your site, e.g. "/blog"
 repository               : #"swift-man/swift-man.github.io"# GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -30,7 +30,7 @@ masthead_title           : "Swift-Man Blog"# overrides the website title display
 breadcrumbs            : false # true, false (default) // _data/ui-text.yml에 다국어 지원 가능합니다.
 words_per_minute         : 200 #해당 포스트 읽는데 걸리는 시간을 계산하기 위해 대락 분당 읽는 수가 몇글자가 될지 적는 공간.
 comments:
-  provider               : true, "disqus", #"discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
+  provider               : "utterances", #"disqus", #"discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
   disqus:
     shortname            :https-swift-man-github-io # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
@@ -93,9 +93,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          :
+    tracking_id          :"G-DB7BTEYV9F"
     anonymize_ip         : # true, false (default)
 
 
@@ -103,8 +103,8 @@ analytics:
 author:
   name             : "Swift-Man"
   avatar           : "/assets/images/swift-man.jpg"# path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "꾸준히 공부하는 개발자입니다. <br> 블로그 포스트 글에서 잘못된 부분이나 수정했으면 하는 부분, 적극적으로 댓글 남겨주신다면 감사하겠습니다."
-  location         : "Republic of Korea"
+  bio              : "만나뵈어 반갑습니다. 개인적인 공부의 흔적입니다. 틀린 부분이 있을 수 있습니다. 댓글로 알려주시면 감사하겠습니다."
+  location         : "Republic of Korea Seoul"
   email            : "jiniopening@naver.com"
   links:
     - label: "Email"
