--- a/_config.yml
+++ b/_config.yml
@@ -283,7 +283,7 @@ defaults:
     values:
       layout: single
       author_profile: false
-      read_time: true
+      read_time: false
       comments: true
       share: false
       related: true
