사이트맵 수정, url 영어로 교체

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -192,11 +192,11 @@ sidebar-git:
     url: /git/blog/
     children:
       - title: "└ 시작하기"
-        url: /git/blog/시작하기/
+        url: /git/blog/start/
       - title: "└ 검색 등록 하기"
-        url: /git/blog/검색-등록-하기/
+        url: /git/blog/register-to-search/
       - title: "└ 추후 볼만한 사이트 모음"
-        url: /git/blog/추후-볼만한-사이트-모음/
+        url: /git/blog/sites-to-see-later/
   - title: "Commit Message"
     url: /git/commit-message/
     children:
