커밋 메시지 추가

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -216,8 +216,8 @@ sidebar-git:
   - title: "Commit Message"
     url: /git/commit-message/
     children:
-      - title: "└ Operators"
-        url: /operators/
+      - title: "└ Update Swift version to 5.6"
+        url: /git/commit-message/update-swift-version-to-5.6/
 ##############
 sidebar-swift-ui:
   - title: "Swift-UI"
