_pages profile false 설정

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,8 +18,8 @@ main:
     url: /swift-ui/
   - title: "TDD"
     url: /tdd/
-  - title: "ETC"
-    url: /year-archive/
+  #- title: "ETC"
+  # url: /year-archive/
 ##############
 sidebar-swift:
   - title: "Swift 5.5"
