좋은개발자 2 업로드

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -172,8 +172,10 @@ sidebar-clean:
         url: /clean/think/start-development/
       - title: "└ iOS 개발을 시작하게 된 계기"
         url: /clean/think/start-development-ios/
-      - title: "└ 좋은 개발자"
-        url: /clean/think/good-developer/
+      - title: "└ 좋은 개발자(1)"
+        url: /clean/think/good-developer1/
+      - title: "└ 좋은 개발자(2)"
+        url: /clean/think/good-developer2/
   - title: "Naming"
     url: /clean/naming/
 #    children:
