--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "Swift-Man"
   avatar           : "/assets/images/swift-man.jpg"# path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "만나뵈어 반갑습니다. 개인적인 공부의 흔적입니다. 틀린 부분이 있을 수 있습니다. 댓글로 알려주시면 감사하겠습니다."
+  bio              : "만나뵈어 반갑습니다. 개인 공부 공간으로 틀린 부분이 있을 수 있습니다. 댓글로 가감없이 알려주세요!"
   location         : "Republic of Korea Seoul"
   email            : "jiniopening@naver.com"
   links:
