--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,6 +29,11 @@ sidebar-swift:
         url: /swift/5-5/async-await/
       - title: "└ actor"
         url: /swift/5-5/actor/
+  - title: "NSObject"
+    url: /swift/nsobject/
+    children:
+      - title: "└ nil, Nil, NULL, NSNull 대한 차이"
+        url: /swift/nsobject/nsnull/
 #
 #  - title: "Swift 5.4 Released!"
 #    url: https://swift.org/blog/swift-5-4-released/
@@ -75,6 +80,21 @@ sidebar-swift:
 sidebar-ios:
   - title: "FairPlay Streaming"
     url: /ios/fairplay-streaming/
+  - title: "UIResponder"
+    url: /ios/uiresponder/
+    children:
+      - title: "└ UIApplicationMain"
+        url: /ios/uiresponder/uiapplicationmain/
+      - title: "└ UIViewController"
+        url: /ios/uiresponder/uiviewcontroller/
+      - title: "  └ nil, Nil, NULL, NSNull 대한 차이"
+        url: /swift/nsobject/nsnull/
+      - title: "└ UIView"
+        url: /ios/uiresponder/uiview/
+      - title: "  └ bounds"
+        url: /ios/uiresponder/uiview/bounds/
+      - title: "  └ frmae"
+        url: /ios/uiresponder/uiview/frame/
 #    children:
 #      - title: "iOS 15"
 #        url: /operators/
@@ -267,6 +287,8 @@ sidebar-git:
         url: /git/blog/progremmers-copyright/
       - title: "└ 맞춤법 검사기(링크)"
         url: https://speller.cs.pusan.ac.kr/
+      - title: "└ 표 만들기(링크)"
+        url: https://www.tablesgenerator.com/markdown_tables/
       - title: "└ 마크 다운 문법"
         url: /git/blog/markdown_grammar/
   - title: "Commit Message"
